--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <!-- Toast Card - hidden by default using CSS -->
       <div id="toast" class="toast">
         <span id="toast-message">Lift off! 🚀</span>
-        <span id="close-toast">x</span>
+        <span id="toast-close" onclick="closeToast()">X</span>
       </div>
-
     </main>
   </body>
 
