--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Toast Card - hidden by default using CSS -->
       <div id="toast" class="toast">
         <span id="toast-message">Lift off! 🚀</span>
-        <span id="toast-close" onclick="closeToast()">X</span>
+        <span id="toast-close">X</span>
       </div>
     </main>
   </body>
